--- a/style.css
+++ b/style.css
@@ -1,1 +1,102 @@
-h1 {color:green};
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  max-width: 1920px;
+  margin: auto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+nav {
+  background-color: rgb(219, 4, 252);
+  width: 100%;
+  height: 41px;
+  padding-top: 20px;
+}
+
+.list-item {
+  display: flex;
+  justify-content: right;
+  gap: 80px;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.item a {
+  color: aliceblue;
+  font-size: 20px;
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-transform: uppercase;
+}
+
+.avatar {
+  border-radius: 50%;
+  width: 400px;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  padding-top: 80px;
+  border-bottom: 5px solid black;
+  padding-bottom: 80px;
+}
+
+h1 {
+  font-size: 100px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 800;
+  text-align: center;
+  line-height: 200px;
+}
+
+.prof {
+  text-align: center;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.block {
+  font-size: 40px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-bottom: 1px solid black;
+  width: 233px;
+  padding-bottom: 10px;
+  margin-bottom: 30px;
+}
+
+.list-cont {
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 70px;
+  margin-top: 80px;
+}
+
+section {
+  width: 300px;
+  line-height: 30px;
+}
+
+footer {
+  background-color: rgb(219, 4, 252);
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer img {
+  width: 114px;
+}/*# sourceMappingURL=style.css.map */
